# archydra

./: .gitignore  archydra.yaml  pyproject.toml
etc/: consumer.yaml
src/archydra/: AbstractClasses.py  Abstracts.py  Helpers.py  __init__.py  __main__.py  cli.py
src/archydra/Consumers/: BaseConsumer.py  FileConsumer.py  LoggingConsumer.py  ReadWiseConsumer.py  __init__.py
src/archydra/Filters/: BaseFilter.py  Selector.py  __init__.py
src/archydra/Producers/: BaseFilter.py  BaseProducer.py  FileProducer.py  Selector.py  YouTubeProducer.py  _BaseProducer.py  __init__.py
src/archydra/Queue/: BaseQueue.py  BaseTask.py  FSQueue.py  __init__.py
tests/: test_rw_token.py  test_selector.py
